--- a/Assignment 1/Integer Collection 2/.project
+++ b/Assignment 1/Integer Collection 2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assignment 1</name>
+	<name>Integer Collection 2</name>
 	<comment></comment>
 	<projects>
 	</projects>
